# rest_test

./: LICENSE  pyproject.toml
django_rest_test/: manage.py
django_rest_test/django_rest_test/: asgi.py  settings.py  urls.py  wsgi.py
